# deb_ros_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
Exar_USB_Serial_Kernel_Driver/: .xr_usb_serial_common.ko.cmd  .xr_usb_serial_common.mod.cmd  .xr_usb_serial_common.mod.o.cmd  .xr_usb_serial_common.o.cmd  modules.order  xr_usb_serial_common.ko  xr_usb_serial_common.mod  xr_usb_serial_common.mod.c
boat_description_ros_deb/: CMakeLists.txt
boat_description_ros_deb/urdf/: foilboat_components.xacro  foilboat_model.xacro  materials.xacro
clearpath_ros_deb/: package.xml
clearpath_ros_deb/Exar_USB_Serial_Kernel_Driver/: README.md
clearpath_ros_deb/include/clearpath_sc_ros/: Axis.hpp
clearpath_ros_deb/msg/: ServoState.msg
clearpath_ros_deb/src/: clearpath_driver_node.cpp
config/: config.yaml  config_physical.yaml  config_simulation.yaml  config_template.yaml  params.yaml
dynamic_reconfigure/: ControllerConfig.cfg  ControllerGains.cfg
fcs_ros_deb/: CMakeLists.txt  package.xml
fcs_ros_deb/config/: config_physical.yaml
fcs_ros_deb/include/fcs_ros_deb/: FCSROSControl.hpp  fcs_ros_deb.hpp
fcs_ros_deb/include/fcs_ros_deb/low_level_control/clearpath/: ClearpathLLC.hpp
fcs_ros_deb/launch/: control_physical.launch
fcs_ros_deb/src/: FCSROSControl.cpp  fcs_node.cpp  fcs_ros_deb.cpp
fcs_ros_deb/src/controller/: FoilboatController.cpp  PIDFF.cpp  PIDWrapper.cpp  controller_node.cpp
fcs_ros_deb/src/low_level_control/: minimaestro_llc_node.cpp
fcs_ros_deb/src/low_level_control/clearpath/: ClearpathLLC.cpp  clearpath_llc_node.cpp
include/clearpath_sc_ros/: Axis.hpp  ClearpathDriver.hpp
include/fcs_ros_deb/controller/: FoilboatController.hpp  PIDFF.hpp  PIDWrapper.hpp
include/fcs_ros_deb/low_level_control/clearpath/: ClearpathLLC.hpp
include/fcs_ros_deb/range_sensor_wrapper/: RangeSensorProcessor.hpp
include/foilboat_controller/: FoilboatController.hpp  PIDFF.hpp  PIDWrapper.hpp  RangeSensorProcessor.hpp
include/foilboat_controller/controller/: FoilboatController.hpp  PIDWrapper.hpp
include/toughsonic/: Toughsonic.hpp
launch/: control_physical.launch  control_simulation.launch  controller.launch  launch_rviz.launch  launch_sensor.launch  rviz.launch  sensor_fusion_physical.launch
lowlevel_ros_deb/: CMakeLists.txt  package.xml
lowlevel_ros_deb/include/lowlevel_ros_deb/low_level_control/clearpath/: ClearpathLLC.hpp
lowlevel_ros_deb/include/lowlevel_ros_deb/range_sensor_wrapper/: RangeSensorProcessor.hpp
lowlevel_ros_deb/src/low_level_control/clearpath/: ClearpathLLC.cpp  clearpath_llc_node.cpp
lowlevel_ros_deb/src/range_sensor_wrapper/: RangeSensorProcessor.cpp  range_sensor_wrapper_node.cpp
msg/: FoilboatControl.msg  FoilboatState.msg  FoilboatTarget.msg  ServoConfig.msg
msgs_ros_deb/: CMakeLists.txt  package.xml
msgs_ros_deb/msg/: FoilboatTarget.msg
pid_ros_deb/: CMakeLists.txt  package.xml
pid_ros_deb/config/: config_physical.yaml  config_template.yaml
pid_ros_deb/dynamic_reconfigure/: ControllerConfig.cfg
pid_ros_deb/include/pid_ros_deb/controller/: FoilboatController.hpp  PIDWrapper.hpp
pid_ros_deb/include/pid_ros_deb/low_level_control/clearpath/: ClearpathLLC.hpp
pid_ros_deb/include/pid_ros_deb/range_sensor_wrapper/: RangeSensorProcessor.hpp
pid_ros_deb/launch/: control_physical.launch  control_simulation.launch  rviz.launch  sensor_fusion_physical.launch  sensor_fusion_simulation.launch
pid_ros_deb/rviz/: visualize_boat.rviz  visualize_sim.rviz
pid_ros_deb/src/controller/: FoilboatController.cpp  PIDFF.cpp  PIDWrapper.cpp  controller_node.cpp  test.cpp
pid_ros_deb/src/low_level_control/: minimaestro_llc_node.cpp
pid_ros_deb/src/low_level_control/clearpath/: ClearpathLLC.cpp  clearpath_llc_node.cpp
pid_ros_deb/src/range_sensor_wrapper/: RangeSensorProcessor.cpp  range_sensor_wrapper_node.cpp
rviz/: visualize_boat.rviz
src/: Axis.cpp  ClearpathDriver.cpp  FoilboatController.cpp  PIDFF.cpp  PIDWrapper.cpp  RangeSensorProcessor.cpp  Toughsonic.cpp  clearpath_driver_node.cpp  controller_llc_node.cpp  controller_node.cpp  main.cpp  range_sensor_wrapper_node.cpp
src/controller/: FoilboatController.cpp  PIDFF.cpp  PIDWrapper.cpp  controller_node.cpp
src/low_level_control/: minimaestro_llc_node.cpp
src/low_level_control/clearpath/: ClearpathLLC.cpp  clearpath_llc_node.cpp
src/range_sensor_wrapper/: RangeSensorProcessor.cpp  range_sensor_wrapper_node.cpp
srv/: GetConfig.srv
toughsonic_ros_deb/: CMakeLists.txt
toughsonic_ros_deb/config/: params.yaml
toughsonic_ros_deb/src/: main.cpp
urdf/: foilboat_components.xacro  foilboat_model.xacro  macros.xacro  planesim_model.xacro
