<?xml version="1.0"?>
<package format="2">
  <name>fcs_ros_deb</name>
  <version>0.0.0</version>
  <description>The fcs_ros_deb package</description>

  <maintainer email="bf01@todo.todo">bf01</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
